--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Road Complaints</string>
     <string name="action_settings">Settings</string>
+    <string name="cancel">Cancel</string>
+    <string name="GPSAlertDialogTitle">ALERT</string>
+    <string name="GPSAlertDialogMessage">This App wants to Access your location</string>
+    <string name="okay">Okay</string>
 </resources>
